# thunk-fizzbuzz

./: .gitignore  meson.build
include/: fizzbuzz.h
include/fizzbuzz/: _macros.h
src/: fizzbuzz.c  main.c
